make ffmpeg local

--- a/.github/workflows/macos-6.2.yml
+++ b/.github/workflows/macos-6.2.yml
@@ -75,11 +75,10 @@ jobs:
           make -j$(nproc)
           sudo make install
           #brew install qt # or use official offline installer
-          brew uninstall ffmpeg@5 libvorbis zstd libogg lzo xz libtiff hunspell
-          brew install opencc
+          brew uninstall ffmpeg@5 libvorbis zstd libogg lzo xz libtiff hunspell opencc
           brew install create-dmg
           qmake CONFIG+=release   CONFIG+=zim_support   CONFIG+=chinese_conversion_support
-          make -j 8
+          make -j$(nproc)
       # 打包
       - name: package
         run: |
